<resources>
    <string name="app_name">Fire Prevention</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">설정</string>


    <string name="title">화재 감지 알림 서비스</string>
    <string name="login">로그인</string>
    <string name="autologin">자동 로그인</string>
    <string name="signup">회원 가입</string>
    <string name="cancel">취소</string>
    <string name="signuptext">등록하실 이메일과 비밀번호를 입력해주세요.</string>
    <string name="signuptitle">정말 간단합니다!</string>
    <string name="nav_fire">불꽃</string>
    <string name="nav_smoke">연기</string>
    <string name="nav_temp">온도</string>
    <string name="caution">알림</string>
    <string name="status">상태</string>
    <string name="safe">지금은 안전합니다.\n\n아이콘을 터치하여 자세하게 확인할 수 있습니다.</string>
    <string name="unsafe">화재가 감지되었습니다\n버튼을 눌러 확인하세요</string>
    <string name="DAUM_MAP_KEY">952d7bd3b757ddb384711627fbd29538</string>


    <string name="first_text">제품을 등록합니다</string>
    <string name="qrcode_scan_button">QR코드 스캔</string>
    <string name="enrollment_button">등록 하기</string>
    <string name="enrollment">등록</string>
    <string name="scanner_activity">QR CODE SCAN</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="db_name">sensors.db</string>
    <string name="table_name">sensor</string>
</resources>
