<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/title_icon"
        android:src="@drawable/title"
        android:layout_above="@+id/title"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:textColor="#000"
        android:textSize="33dp"
        android:textStyle="bold"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/email"
        android:layout_centerHorizontal="true" />

    <EditText
        android:background="@drawable/round_edittext_focus"
        android:hint="E-mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="20"
        android:id="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:background="@drawable/round_edittext_focus"
        android:hint="PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="20"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#fff"
        android:background="@drawable/blue_button"
        android:id="@+id/login"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autologin"
        android:id="@+id/autologin"
        android:layout_below="@+id/login"
        android:layout_marginTop="2dp"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <TextView
        android:textColor="#06f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signup"
        android:id="@+id/signup"
        android:layout_alignTop="@+id/autologin"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login" />


</RelativeLayout>