<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/signup_icon"
        android:layout_alignBottom="@+id/line1"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signuptitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="_______________________________"
        android:textColor="#444"
        android:id="@+id/line1"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#444"
        android:textSize="17dp"
        android:text="@string/signuptext"
        android:textStyle="bold|normal"
        android:layout_above="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginBottom="30dp"
        android:id="@+id/textView3" />
    <EditText
        android:background="@drawable/round_edittext_focus"
        android:hint="E-mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="20"
        android:id="@+id/email"
        android:layout_above="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <EditText
        android:background="@drawable/round_edittext_focus"
        android:hint="PW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="20"
        android:id="@+id/password"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />
    <Button
        android:background="@drawable/gray_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="15dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/cancel"
        android:layout_alignTop="@+id/signup"
        android:layout_toLeftOf="@+id/signup"
        android:layout_toStartOf="@+id/signup"
        android:layout_marginRight="10dp"/>
    <Button
        android:background="@drawable/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="15dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/signup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"/>



</RelativeLayout>